# rusty-kaspa-stratum

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Start External.bat  config.yaml  start-bridge-choice.bat  start-bridge-external.bat
.cargo/: config.toml
.github/workflows/: rust.yml
Tools/bridge-monitor/: BITMAIN_CODE_ANALYSIS.md  Cargo.toml  README.md  monitor-viewer.html  package-lock.json  vardiff_sample.ps1
Tools/bridge-monitor/src/: main.rs
appimage/: AppRun  build.sh
bridge/: Cargo.toml  config.yaml
bridge-tauri/: README.md  package-lock.json  package.json
bridge-tauri/scripts/: generate-tauri-icons.cjs
bridge-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
bridge-tauri/src-tauri/icons/: icon.icns
bridge-tauri/src-tauri/src/: main.rs
bridge-tauri/ui/: index.html
bridge-tauri/ui/dashboard/: blocks.html  index.html  metrics.html  node.html  raw.html  session-charts.html  trends.html  workers.html
bridge-tauri/ui/dashboard/js/: api-base.js  dashboard.js  raw.js
bridge-tauri/ui/js/: setup.js
bridge/appimage/: build.sh
bridge/docs/: CONTRIBUTOR_MAP.md  README.md  UI.md
bridge/src/: app_dirs.rs  bridge_error.rs  cli.rs  inprocess_node.rs  lib.rs  main.rs  runner.rs  tests.rs  tracing_setup.rs
bridge/src/config/: app_config.rs
bridge/src/cpu_miner/: rkstratum_cpu_miner.rs
bridge/src/host/: host_metrics.rs
bridge/src/jsonrpc/: jsonrpc_event.rs
bridge/src/kaspa/kaspaapi/: coinbase_tag.rs  mod.rs  node_status.rs
bridge/src/kaspa/kaspaapi/api/: block_submit_guard.rs  mod.rs  streams.rs  template_submit.rs
bridge/src/mining/: hasher.rs  mining_state.rs  pow_diagnostic.rs
bridge/src/prom/: metrics.rs  mod.rs
bridge/src/prom/http/: config_api.rs  mod.rs  ops_access.rs  serve.rs  static_files.rs
bridge/src/prom/http/stats_json/: aggregate.rs  mod.rs  parse.rs  types.rs
bridge/src/share_handler/: duplicate_submit.rs  kaspa_api_trait.rs  lifecycle.rs  mod.rs  vardiff.rs  work_stats.rs
bridge/src/share_handler/submit/: block_submit.rs  duplicate.rs  error.rs  finish.rs  handle.rs  mod.rs  parse.rs  pow_loop.rs  pow_math.rs  pow_step.rs
bridge/src/stratum/: default_client.rs  stratum_line_codec.rs  stratum_server.rs
bridge/src/stratum/client_handler/: handshake.rs  mod.rs
bridge/src/stratum/client_handler/job_dispatch/: difficulty.rs  immediate_job.rs  mod.rs  new_block_job.rs
bridge/src/stratum/stratum_context/: mod.rs  outbound.rs  types.rs
bridge/src/stratum/stratum_listener/: listen.rs  mod.rs  types.rs
bridge/src/stratum/stratum_listener/client_io/: mod.rs  read_loop.rs
bridge/src/util/: log_colors.rs  net_utils.rs
bridge/static/: blocks.html  index.html  metrics.html  node.html  raw.html  session-charts.html  trends.html  workers.html
bridge/static/css/: site.css
bridge/static/js/: dashboard.js  raw.js
docs/: CONFIGURATION.md  PACKAGING.md  README.md
lib/stratum/: Cargo.toml
lib/stratum-service/: Cargo.toml
lib/stratum-service/src/: lib.rs
lib/stratum/src/: log_colors.rs  share_handler.rs
musl-toolchain/: build.sh  preset.sh
src/: app_config.rs  client_handler.rs  default_client.rs  hasher.rs  job_formatter.rs  jsonrpc_event.rs  kaspaapi.rs  log_colors.rs  main.rs  mining_state.rs  pow_diagnostic.rs  prom.rs  share_handler.rs  stratum_context.rs  stratum_listener.rs  stratum_server.rs  tracing_setup.rs
tests/: bitmain_code_path_verification.rs  bitmain_verification.rs
