[package]
name = "kaspa-stratum-bridge"
version = "1.0.9"
edition = "2021"
authors = ["Kaspa developers"]
description = "Kaspa Stratum Bridge - Mining pool connectivity for Kaspa ASIC miners"
license = "ISC"
repository = "https://github.com/kaspanet/rusty-kaspa"

[dependencies]
# Kaspa dependencies - aligned with BridgeBinary branch
kaspa-consensus-core = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "BridgeBinary" }
kaspa-hashes = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "BridgeBinary" }
kaspa-pow = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "BridgeBinary" }
kaspa-addresses = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "BridgeBinary" }
kaspa-rpc-core = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "BridgeBinary" }
kaspa-rpc-service = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "BridgeBinary" }
kaspa-grpc-client = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "BridgeBinary" }
kaspa-notify = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "BridgeBinary" }
kaspa-core = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "BridgeBinary" }
kaspa-utils = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "BridgeBinary" }
kaspad = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "BridgeBinary" }

# External dependencies
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
num-traits = "0.2"
async-trait = "0.1"
once_cell = "1.3"
futures-util = "0.3"
parking_lot = "0.12"
regex = "1.7"
uuid = { version = "1.3", features = ["v4"] }

# CLI
clap = { version = "4.3", features = ["derive"] }

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
prometheus = "0.13"

# Utility
yaml-rust = "0.4"
anyhow = "1.0"
blake2 = "0.10"
num-bigint = "0.4"
faster-hex = "0.1"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Console"] }
tracing-log = "0.2.0"
chrono = "0.4.42"

[dev-dependencies]
tokio-test = "0.4"


[[bin]]
name = "stratum-bridge"
path = "src/main.rs"
