[package]
name = "rustbridge-stratum-service"
version = "1.3.0"
edition = "2021"
authors = ["RustBridge Contributors"]
description = "AsyncService wrapper for rustbridge stratum"
license = "MIT"

[dependencies]
rustbridge = { path = "../stratum" }

tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
yaml-rust = "0.4"
once_cell = "1.19"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
