[package]
name = "rustbridge"
version = "1.3.0"
edition = "2021"
authors = ["RustBridge Contributors"]
description = "RustBridge - Kaspa Stratum Bridge implementation"
license = "MIT"

[dependencies]
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "2ccc9e4ca9aa184c62c4fb14dbb463834264e01d", package = "kaspa-consensus-core" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "2ccc9e4ca9aa184c62c4fb14dbb463834264e01d", package = "kaspa-hashes" }
kaspa-pow = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "2ccc9e4ca9aa184c62c4fb14dbb463834264e01d", package = "kaspa-pow" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "2ccc9e4ca9aa184c62c4fb14dbb463834264e01d", package = "kaspa-addresses" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "2ccc9e4ca9aa184c62c4fb14dbb463834264e01d", package = "kaspa-rpc-core" }
kaspa-grpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "2ccc9e4ca9aa184c62c4fb14dbb463834264e01d", package = "kaspa-grpc-client" }
kaspa-notify = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "2ccc9e4ca9aa184c62c4fb14dbb463834264e01d", package = "kaspa-notify" }

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
parking_lot = "0.12"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
prometheus = "0.13"
regex = "1.10"
yaml-rust = "0.4"
async-trait = "0.1"
once_cell = "1.19"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Console"] }

[dev-dependencies]
tokio-test = "0.4"
